--- a/index.html
+++ b/index.html
@@ -32,58 +32,126 @@
     <div class="container py-3" style="text-align: center">
         <div class="row">
 
-            <h1> Welcome!</h1>
-            <h3>The following animation was built with CreepyFace Plugin which is a fun JavaScript library that makes
-                any
-                face look at the pointer, a firefly or dance! This plugin makes your website more fun and
-                interactive with
-                just 13 lines of code.</h3>
+            <img src="images/cover.jpg" alt="CreepyFace cover" style="width: 100%; height: 100%;">
+            <h4 style="margin: 60px; text-align: center;">CreepyFace is a fun JavaScript Plugin that
+                adds an interactive, eye-tracking effect to images, making them appear to "follow" the user's cursor or
+                touch movement! This plugin makes your website more fun
+                with just 13 lines of code.</h4>
         </div>
         <div class="row">
-            <div class="column" style="background-color: #ffccad;border-radius: 2em; border-color: white;">
-                <h4>
+            <div class="column">
+                <h4 class="centered-text" style="background-color: #50c799; border-radius: 2em; height: 50px; color: white;">
                     CreepyFace Plugin Features
                 </h4>
-                <p></p>
+                <p style="text-align: justify; margin: 30px;"><b>Creepyface JavaScript library</b> is a unique and
+                    interactive
+                    tool that allows web developers to
+                    create an engaging and somewhat eerie user experience. This plugin tracks the user's cursor or touch
+                    movement, making an image appear to "follow" them with its eyes. This effect can be applied to
+                    various projects, adding an element of interactivity and surprise. Here are some key features of the
+                    Creepyface plugin: <br>
+                    Creepyface will automatically detect your image (thanks to the data-creepyface attribute) and make
+                    it
+                    look at the mouse or fingers depending on which device you are using.
+                    <br>You can add as many Creepyfaces as you want as long as they all have the data-creepyface
+                    attribute.
+
+                </p>
             </div>
-            <div class="column" style="background-color: #ffccad;border-radius: 2em; border-color: white;">
-                <h4>
-                    Use Cases for CreepyFace Plugin
+            <div class="column">
+                <h4 class="centered-text" style="background-color: #50c799; border-radius: 2em; height: 50px; color: white;">
+                    CreepyFace Plugin Use Cases
                 </h4>
-                <p>An additional elements to make your website more interactive and fun</p>
+                <ul>
+                    <h5>Here are a few interesting use case examples for integrating Creepyface.</h5>
+                    <li style="text-align: left; margin-top: 30px;">
+
+                        <h5>Interactive Websites & Landing Pages</h5>
+
+                        <p>Creepyface can be used to make websites more engaging by giving characters or mascots a more
+                            dynamic
+                            presence. This can be particularly useful in:
+
+                            <br>_Marketing pages that want to add a unique element to captivate visitors;
+
+                            <br>_Portfolio sites where designers or developers want to showcase creative coding skills;
+
+                            <br>_Horror or mystery-themed websites to enhance the eerie atmosphere.
+                        </p>
+                    </li>
+
+                    <li style="text-align: left;">
+                        <h5>Gamification in Web Experiences</h5>
+
+                        <p>By integrating Creepyface into games or interactive storytelling experiences, developers can
+                            create:
+
+                            <br>_Mini-games where users need to escape the gaze of a character;
+
+                            <br>_Puzzles or escape room experiences where the eyes provide clues or react to user
+                            actions;
+
+                            <br>_Engaging storytelling elements, such as a painting that "watches" the player.
+                        </p>
+                    </li>
+                    <li style="text-align: left;">
+                        <h5>E-commerce and Online Stores</h5>
+
+                        <p>Online shops can leverage Creepyface to add a playful and memorable touch to their
+                            experience:
+
+                            <br>_Animated shopping carts that follow users as they browse products;
+                            <br>_Product pages with mascots that react as customers browse.
+                        </p>
+                    </li>
+                </ul>
 
             </div>
         </div>
 
         <div class="row">
-            <div class="column" style="background-color: #ffccad;border-radius: 2em; border-color: white;">
-                <h4>
-                    How to use CreepyFace Plugin
-                </h4>
-                <p></p>
-            </div>
-            <div class="column" style="background-color: #ffccad; border-radius: 2em; border-color: white;">
-                <h4>
-                    CreepyFace Plugin Demo
-                </h4>
-                <p></p>
-            </div>
+            <div>
+                <h2 class="column" style="margin: 20px;">
+                    How to use CreepyFace Plugin <img src="images/cursor.png" alt="CreepyFace cursor"
+                        style="height: 30px" ;></h2>
+                <p style="margin: 30px;">
+                    The creators of this plugin makes our lives as web designers so much easier. They have an incredible
+                    README github page explaining in clear details how to add and modify the plugin. To access the
+                    Github page AND also to make your plugin with your own photos you can go to their <a href="
+                    https://creepyface.io/" target="_blank">website</a>.
+                </p>
+                <img src="images/Screenshot 2025-03-05 223053.png" alt="Code screenshot" style="width: 80%;">
 
-            <div class="resize">
-                <script src="https://creepyface.io/creepyface.js"></script>
-
-                <img data-creepyface src="https://creepyface.io/img/nala/serious"
-                    data-src-hover="https://creepyface.io/img/nala/hover"
-                    data-src-look-0="https://creepyface.io/img/nala/0"
-                    data-src-look-45="https://creepyface.io/img/nala/45"
-                    data-src-look-90="https://creepyface.io/img/nala/90"
-                    data-src-look-135="https://creepyface.io/img/nala/135"
-                    data-src-look-180="https://creepyface.io/img/nala/180"
-                    data-src-look-225="https://creepyface.io/img/nala/225"
-                    data-src-look-270="https://creepyface.io/img/nala/270"
-                    data-src-look-315="https://creepyface.io/img/nala/315" />
+                <br>It's really THAT simple to make your website more personalized.
             </div>
-            <div class="resize">
+        </div>
+        <div>
+            <h2 class="column" style="margin: 25px;">
+                CreepyFace Plugin Demo <img src="images/cursor.png" alt="CreepyFace cursor" style="height: 30px" ;>
+            </h2>
+            <p></p>
+        </div>
+
+        <div class="row">
+            <h5>First, a cute cat</h5>
+        </div>
+        <div class="resize" style="margin-bottom: 30px;">
+            <script src="https://creepyface.io/creepyface.js"></script>
+
+            <img data-creepyface src="https://creepyface.io/img/nala/serious"
+                data-src-hover="https://creepyface.io/img/nala/hover" data-src-look-0="https://creepyface.io/img/nala/0"
+                data-src-look-45="https://creepyface.io/img/nala/45"
+                data-src-look-90="https://creepyface.io/img/nala/90"
+                data-src-look-135="https://creepyface.io/img/nala/135"
+                data-src-look-180="https://creepyface.io/img/nala/180"
+                data-src-look-225="https://creepyface.io/img/nala/225"
+                data-src-look-270="https://creepyface.io/img/nala/270"
+                data-src-look-315="https://creepyface.io/img/nala/315" />
+        </div>
+
+        <div class="row">
+            <h5>Second, me :) </h5>
+            <div class="resize" style="margin-bottom: 30px;">
                 <img data-creepyface src="images/serious.jpeg" data-src-hover="images/hover.jpeg"
                     data-src-look-0="images/0.jpeg" data-src-look-45="images/45.jpeg" data-src-look-90="images/90.jpeg"
                     data-src-look-135="images/135.jpeg" data-src-look-180="images/180.jpeg"
@@ -91,8 +159,11 @@
                     data-src-look-315="images/315.jpeg" />
 
             </div>
+        </div>
 
-            <div class="resize">
+        <div class="row">
+            <h5>Thrid, a cat following the beat of the song </h5>
+            <div class="resize" style="margin-bottom: 30px;">
                 <script src="https://creepyface.io/creepyface.js"></script>
                 <script src="https://unpkg.com/creepyface-dance"></script>
                 <img data-creepyface data-points="bensound-buddy" src="https://creepyface.io/img/nala/serious"
@@ -121,8 +192,13 @@
                         ]),
                     })
                 </script>
-            </div>
 
+            </div>
+        </div>
+
+        <div class="row" style="margin: 20px; text-align: center;">
+            <img src="images/eyes.png" alt="CreepyFace logo" style="width:120px; display: block; margin: auto;">
+        </div>
 
 </body>
 
